force-app/main/default/objects/Rebalance__c/Rebalance__c.object-meta.xml
<CustomObject>
    <label>Rebalance</label>
    <nameField>
        <displayFormat>RB-{00000}</displayFormat>
        <label>Rebalance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebalances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>