force-app/main/default/objects/Rebalance__c/fields/Change_From__c.field-meta.xml
<CustomField>
    <fullName>Change_From__c</fullName>
    <label>Change From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Bit of both</fullName>
            </value>
            <value>
                <fullName>Adventurous</fullName>
            </value>
            <value>
                <fullName>Cautious</fullName>
            </value>
            <value>
                <fullName>Duration Change</fullName>
            </value>
            <value>
                <fullName>Future Innovation</fullName>
            </value>
            <value>
                <fullName>Future Vision</fullName>
            </value>
            <value>
                <fullName>Kiwi Blend</fullName>
            </value>
            <value>
                <fullName>Renewable Focus</fullName>
            </value>
            <value>
                <fullName>Super Variety</fullName>
            </value>
            <value>
                <fullName>Very Short-Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>