force-app/main/default/objects/Rebalance__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Risk Appetite</fullName>
            </value>
            <value>
                <fullName>Theme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>