force-app/main/default/objects/Rebalance__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rebalances</relationshipLabel>
    <relationshipName>Rebalances</relationshipName>
    <type>Lookup</type>
</CustomField>