force-app/main/default/objects/Rebalance__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>To hold a customer email address.</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>