force-app/main/default/objects/Rebalance__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the goal(goal number should be displayed)</description>
    <inlineHelpText>Related Goal.</inlineHelpText>
    <label>Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Rebalances</relationshipLabel>
    <relationshipName>Rebalances</relationshipName>
    <type>Lookup</type>
</CustomField>