force-app/main/default/objects/Rebalance__c/fields/Goal_Id__c.field-meta.xml
<CustomField>
    <fullName>Goal_Id__c</fullName>
    <description>Phoebe Goal Id for this Rebalance</description>
    <formula>Goal__r.Goal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Id</label>
    <type>Text</type>
</CustomField>