force-app/main/default/objects/Rebalance__c/fields/Prompt_Status__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Status__c</fullName>
    <description>Value shows, what happens to the prompt.</description>
    <inlineHelpText>Status of prompt.</inlineHelpText>
    <label>Prompt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>