force-app/main/default/objects/Rebalance__c/fields/Rebalance_Id__c.field-meta.xml
<CustomField>
    <fullName>Rebalance_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rebalance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>