force-app/main/default/objects/Rebalance__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp Generated By AWS.</description>
    <inlineHelpText>Timestamp Generated By AWS.</inlineHelpText>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>