force-app/main/default/objects/Rebalance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theme Change</fullName>
            </value>
            <value>
                <fullName>Risk appetite change</fullName>
            </value>
            <value>
                <fullName>Duration change rebalance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>